# NyayaLens

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/tests/: test_api.py  test_clause_extractor.py  test_freelance_service_agreement.py  test_guardrails.py  test_issue_spotter.py  test_law_cross_reference.py  test_law_pack_manifest_coverage.py  test_law_pack_metadata_inference.py  test_product_polish.py  test_report_view_model.py  test_retrieval.py  test_rules_employment.py  test_safety_scope.py  (+4 more)
demo_outputs/: employment_exit_report.json  eval_summary.json  eval_summary.md  freelance_payment_report.json  law_pack_coverage.json  law_pack_validation.json  stress_eval_summary.json  stress_eval_summary.md  tenant_deposit_report.json  unsafe_request_report.json
docs/: architecture.md  data_card.md  demo_walkthrough.md  deployment_qa_checklist.md  evaluation_plan.md  github_about.md  github_release_checklist.md  model_card.md  official_corpus_guide.md  red_team_plan.md  resume_bullets.md  safety.md  screenshots.md  ui_design.md
eval/: scenarios.json  stress_scenarios.json
frontend/: streamlit_app.py
scripts/: generate_demo_pdfs.py  generate_demo_reports.py  generate_section_law_packs.py  generate_stress_docs.py  ingest_corpus.py  ingest_law_packs.py  ingest_sample_corpus.py  reset_local_data.sh  run_backend.sh  run_eval.py  run_frontend.sh  setup_dev.sh
(+135 files in other folders)
