[project]
name = "nyayalens"
version = "0.1.0"
description = "Explainable Legal-Rights Agent for Indian Employment Exit and Tenancy Disputes"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "frontend", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
