[project]
name = "nyayalens"
version = "0.1.0"
description = "Explainable Legal-Rights Agent for Indian Employment Exit and Tenancy Disputes"
requires-python = ">=3.11"
# Dependency source of truth is requirements*.txt so Streamlit Cloud and local
# setup use the same lightweight install path.
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests", "tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "frontend", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
